# WhatToEatNext

./: .api-response-metrics.json  .ci-performance-metrics.json  .cursorrules-fix-scripts  .dockerignore  .enhanced-unused-variables-metrics.json  .env.example  .eslint-cache  .eslint-quick-reference.md  .eslintignore  .eslintrc 2.json  .eslintrc-campaign.mjs  .eslintrc.js  .eslintrc.json  .explicit-any-enterprise-metrics.json  .explicit-any-metrics.json  .geminiignore  .gitattributes  .gitignore  .gitlab-ci-quick-reference.md  .gitlab-ci.yml  .grandfather-assessment-phase1.json  .grandfather-pattern-analysis.json  .import-cleaner-metrics.json  .lint-rate-limit.json  .linting-analysis-metrics.json  .npmrc  .prettierignore  .prettierrc  .prettierrc.cjs  .railwayignore  .typescript-errors-metrics.json  .typescript-warnings-metrics.json  .unicode-validation-metrics.json  .unified-safety-metrics.json  .unused-export-analysis-report.md  .unused-variables-metrics.json  .vercelignore  .yarnrc  .yarnrc.yml  ADVANCED_MULTI_WAVE_REPORT.json  (+943 more)
.astro/: content.d.ts  data-store.json  settings.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: dependabot.yml
mcp-servers/: MCP_INTEGRATION_GUIDE.md  README.md  astrology-server.py  fallback-manager.py  nutrition-server.py  pyproject.toml  spoonacular-server.py
mcp-servers/fallback_data/: astrology_positions.json  nutrition_ingredients.json  recipes_basic.json
spacetime-module/: Cargo.toml  README.md
spacetime-module/src/: lib.rs  live_reducers.rs  live_tables.rs  reducers.rs  tables.rs  words.rs
(+9519 files in other folders)
