[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whattoeatnext-astrology-mcp"
version = "1.0.0"
description = "MCP server for astrological calculations and planetary positions"
authors = [
    {name = "WhatToEatNext", email = "dev@whattoeatnext.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
astrology-mcp-server = "astrology_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["astrology_server*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true